@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+export(boxM_permute)
 export(collapseClusters)
 export(combineResults)
 export(corSubsetPairs)
@@ -88,9 +89,13 @@ importFrom(stats,as.dist)
 importFrom(stats,as.hclust)
 importFrom(stats,cor)
 importFrom(stats,cutree)
+importFrom(stats,dchisq)
 importFrom(stats,dist)
+importFrom(stats,kruskal.test)
 importFrom(stats,median)
+importFrom(stats,optimize)
 importFrom(stats,p.adjust)
+importFrom(stats,pchisq)
 importFrom(stats,quantile)
 importFrom(stats,wilcox.test)
 importFrom(utils,assignInNamespace)
